1
errors/Errors.cpp: In member function ‘void ErrorsChecker::checkFile()’:
errors/Errors.cpp:14:27: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const char*’
   14 |     this->file.open(this->conFilePath);
      |                     ~~~~~~^~~~~~~~~~~
      |                           |
      |                           std::string {aka std::__cxx11::basic_string<char>}
In file included from errors/Errors.hpp:5,
                 from errors/Errors.cpp:1:
/usr/include/c++/13/fstream:665:24: note:   initializing argument 1 of ‘void std::basic_ifstream<_CharT, _Traits>::open(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::ios_base::openmode]’
  665 |       open(const char* __s, ios_base::openmode __mode = ios_base::in)
      |            ~~~~~~~~~~~~^~~
make: *** [Makefile:34: errors/Errors.o] Error 1
